@@ -12,7 +12,7 @@
     </server-stats>
 
     <webapp-list>
-        <webapp name="webroot" https-enabled="true">
+        <webapp name="webroot" https-enabled="false">
             <root-screen host=".*" location="component://webroot/screen/webroot.xml"/>
         </webapp>
     </webapp-list>
