@@ -10,6 +10,12 @@ TODO: general description
 This release includes:
 
 - All the great features of the preview, beta and rc1 releases
+- Added support to skip stats tracking based on a conditional expression
+- More performance profiling and improvements
+  - entity-auto update and delete services no longer do a find first
+- Entity Facade
+  - Primary sequenced ID banking for better performance when creating
+    records with sequenced single field primary key (default bank size 50)
 
 ===========================================================================
 Release 1.0-rc1 - 3 August 2011
